fix for spacing definition lists with nested <ul>

--- a/assets/sass/global.scss
+++ b/assets/sass/global.scss
@@ -113,6 +113,16 @@ ul {
     padding-left: 1.3em;
 }
 
+dt {
+    margin-top: 1.5em;
+}
+
+dl {
+    ul {
+        margin:0;
+    }
+}
+
 input[type=text],
 input[type=password],
 input[type=url],
